--- a/src/YayGourmet/YayGourmet/Properties/launchSettings.json
+++ b/src/YayGourmet/YayGourmet/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:50647",
-      "sslPort": 44364
+      "applicationUrl": "http://localhost:51303",
+      "sslPort": 44350
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "YayGourmetProject": {
+    "YayGourmet": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
